test/error/badforn3.luau
local init, limit, step = 1, 10, "hello"

for i = init, limit, step do
	print(i)
end
